chore(pre-commit): apply EOF fixes (auth.go)
