# restapi/openapi/openapi.yaml
@@ -167,6 +167,89 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SubmissionInfoResponse'
+  /auth/register:
+    post:
+      summary: Register user
+      operationId: postRegister
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RegisterRequest'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RegisterResponse'
+  /auth/current_user:
+    get:
+      summary: Get current user info
+      operationId: getCurrentUserInfo
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CurrentUserInfoResponse'
+    patch:
+      summary: Change current user info
+      operationId: patchCurrentUserInfo
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ChangeCurrentUserInfoRequest'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ChangeCurrentUserInfoResponse'
+  /users/{name}:
+    get:
+      summary: Get user info
+      operationId: getUserInfo
+      parameters:
+        - in: path
+          name: name
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserInfoResponse'
+    patch:
+      summary: Change user info (self only)
+      operationId: patchUserInfo
+      parameters:
+        - in: path
+          name: name
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ChangeUserInfoRequest'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ChangeUserInfoResponse'
 components:
   schemas:
     UserStatistics:
@@ -258,6 +341,59 @@ components:
           items:
             $ref: '#/components/schemas/ProblemCategory'
       required: [categories]
+    User:
+      type: object
+      properties:
+        name:
+          type: string
+        library_url:
+          type: string
+        is_developer:
+          type: boolean
+      required: [name, library_url, is_developer]
+    RegisterRequest:
+      type: object
+      properties:
+        name:
+          type: string
+      required: [name]
+    RegisterResponse:
+      type: object
+      properties: {}
+    CurrentUserInfoResponse:
+      type: object
+      properties:
+        user:
+          $ref: '#/components/schemas/User'
+    ChangeCurrentUserInfoRequest:
+      type: object
+      properties:
+        user:
+          $ref: '#/components/schemas/User'
+      required: [user]
+    ChangeCurrentUserInfoResponse:
+      type: object
+      properties: {}
+    UserInfoResponse:
+      type: object
+      properties:
+        user:
+          $ref: '#/components/schemas/User'
+        solved_map:
+          type: object
+          additionalProperties:
+            type: string
+            description: One of UNKNOWN/LATEST_AC/AC
+      required: [user, solved_map]
+    ChangeUserInfoRequest:
+      type: object
+      properties:
+        user:
+          $ref: '#/components/schemas/User'
+      required: [user]
+    ChangeUserInfoResponse:
+      type: object
+      properties: {}
     SubmitRequest:
       type: object
       properties:
